--- a/src/index.css
+++ b/src/index.css
@@ -28,4 +28,16 @@ a{
   padding: 14px 25px;
   font-size: 16px;
   border-radius: 30px;
+  cursor: pointer;
+  border: 0;
+  outline: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.btn img{
+  width: 20px;
+  margin-left: 10px;
 }
