--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,6 +1,6 @@
 nav{
     width: 100%;
-    background: #333;
+    background: #5e5d5d;
     color: #fff;
     padding: 4px 0;
     position: fixed;
@@ -21,4 +21,9 @@ nav ul li {
     list-style: none;
     margin: 5px 20px;
     font-size: 16px;
+}
+
+.dark-nav{
+    background: ;
+    transition: 0.5s;
 }
