added the testimonials component

--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,10 @@ a{
   line-height: 1;
   cursor: pointer;
 }
-.container{
+/* .container{
   padding-left: 10%;
   padding-right: 10%;
-}
+} */
 .btn{
   background: #8abe53;
   color: #000;
