--- a/src/components/services/Services.css
+++ b/src/components/services/Services.css
@@ -1,5 +1,5 @@
 .services{
-    margin: 80px auto;
+    margin: auto;
     width: 90%;
     display: flex;
     align-items: center;
@@ -7,10 +7,11 @@
 }
 
 .services img{
-    width: 400px;
-    height: 260px;
+    width: 315px;
+    height: 240px;
     border-radius: 10px;
     display: block;
+    
 }
 
 .service{
