--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -47,3 +47,18 @@
     margin-bottom: 15px;
 
 }
+
+/*-------Media query to make the website responsive----*/
+@media (max-width: 800px){
+    .about{
+        flex-direction: column;
+    }
+    .about-left{
+        flex-basis: 100%;
+        margin: 20px;
+        order: 2;
+    }
+    .about-right{
+        flex-basis: 100%;
+    }
+}
