--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -11,12 +11,12 @@ align-items: center;
 justify-content: left;
 }
 .hero-text{
-    text-align: left;
+    text-align: center;
     max-width: 60%;
 }
 
 .hero-text h1{
-    font-size: 40px;
+    font-size: 60px;
     font-weight: 600;
     color: #8abe53;
     
@@ -24,8 +24,28 @@ justify-content: left;
 
 .hero-text p{
     max-width: 60%;
-    margin: 10px auto 20px;
+    margin: 30px auto 20px;
     line-height: 1.4;
-    text-align: left;
+    text-align: center;
+
+}
+
+/*-------Media query to make the website responsive----*/
+@media (max-width: 850px){
+    .hero-text h1{
+        font-size: 40px;
+    }
+
+}
+@media (max-width: 650px){
+    .hero-text h1{
+        font-size: 30px;
+        max-width: 400px;
+        margin: auto;
+    }
+    .hero-text p{
+        font-size: 13px;
+        margin: 15px auto 30px;
+    }
 
 }
