--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -15,3 +15,14 @@
     width: 23%;
     border-radius: 10px;
 }
+
+/*-------Media query to make the website responsive----*/
+@media (max-width: 800px){
+    .gallery{
+        flex-wrap: wrap;
+    }
+    .gallery img{
+        width: 48%;
+        margin-bottom: 25px;
+    }
+}
