--- a/src/components/testimonials/Testimonials.css
+++ b/src/components/testimonials/Testimonials.css
@@ -60,5 +60,39 @@
 
 .user-info h3{
     color: #8abe53;
+}
 
+/*-------Media query to make the website responsive----*/
+@media (max-width: 800px){
+    .testimonials{
+        padding: 0 40px;
+    }
+    .next-btn, .back-btn{
+        padding: 10px;
+        width: 35px;
+    }
+    .testimonials ul li{
+        padding: 10px;
+    }
+    .slide{
+        padding: 10px;
+    }
+    .slide img{
+        width: 50px;
+        border: 3px solid #8abe53;
+    }
+}
+
+@media (max-width: 600px){
+    .user-info{
+        display: block;
+        margin-bottom: 10px;
+        font-size: 12px;
+    }
+    .user-info h3{
+        font-size: 16px;
+    }
+    .slider p{
+        font-size: 12px;
+    }
 }
