--- a/src/components/video player/VideoPlayer.css
+++ b/src/components/video player/VideoPlayer.css
@@ -8,5 +8,9 @@
     z-index: 100;
 }
 .video-player video{
+    width: 90%;
+    max-width: 900px;
+    height: auto;
+    border: 4px solid #fff;
     
 }
